bg color change

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body >
     <header class="container mx-auto mt-10 px-10 ">
         <nav>
-            <div class="navbar bg-base-100 justify-center items-center ">
+            <div class="navbar  justify-center items-center ">
                 <div class="navbar-start">
                   <a class="btn btn-ghost text-xl">
                     <img src="./images/Group 1.png" alt="">
