--- a/index.html
+++ b/index.html
@@ -51,18 +51,18 @@
     </div>
 <!-- button -->
 
-    <div id="button_container" class="flex flex-row justify-between mt-10">
+    <div id="button_container" class="md:flex flex-row justify-between mt-10">
 
     </div>
-    <div class="flex flex-row justify-between mt-10">
+    <div class="md:flex flex-row justify-between mt-10">
         <p class="text-[#131313] text-xl font-semibold">Best Deal For you</p>
         <button class="bg-[#0E7A81] px-4 py-1 text-white rounded-2xl">Sort by Price</button>
     </div>
     <div id="loading-spinner" class="hidden text-center my-40">
         <span class="loading loading-spinner text-info"></span>
     </div>
-   <div class="flex flex-row justify-between gap-3 ">
-    <div id="all_items" class=" grid grid-cols-3 gap-3 w-3/4">
+   <div class="md:flex flex-row justify-between gap-3 ">
+    <div id="all_items" class=" grid grid-cols-1 md:grid-cols-3  gap-3 w-3/4">
         
 
     </div>
